Update nginx w/ php

--- a/goldeneye/web/Dockerfile
+++ b/goldeneye/web/Dockerfile
@@ -3,5 +3,13 @@ FROM nginx:latest
 EXPOSE 80/tcp
 EXPOSE 443/tcp
 
-RUN mkdir /websrv && mkdir -p /mnt/store0
+RUN mkdir -p /websrv\
+    && mkdir -p /mnt/store0\
+    && mkdir -p /etc/letsencrypt/{live,archive}\
+    && mkdir -p /run/php\
+    && apt-get update\
+    && apt-get install -y php7.3-fpm php-rrd
+
 COPY config/* /etc/nginx/
+
+CMD php-fpm7.3 -D && nginx -g 'daemon off;'
