--- a/goldeneye/web/config/nginx.conf
+++ b/goldeneye/web/config/nginx.conf
@@ -1,4 +1,4 @@
-user www-data;
+user root;
 worker_processes 4;
 error_log /var/log/nginx/error.log;
 pid /run/nginx.pid;
@@ -86,8 +86,8 @@ http {
 		listen       443 ssl;
 	        server_name  rdoyle.net;
 	        root         /websrv/rdoyle.net;
-		ssl_certificate /websrv/ssl/rdoyle.net/fullchain.pem;
-        	ssl_certificate_key /websrv/ssl/rdoyle.net/privkey.pem;
+		    ssl_certificate /etc/letsencrypt/live/rdoyle.net/fullchain.pem;
+        	ssl_certificate_key /etc/letsencrypt/live/rdoyle.net/privkey.pem;
 		
 		autoindex on;
 		index index.html;
