--- a/goldeneye/web/config/locations.conf
+++ b/goldeneye/web/config/locations.conf
@@ -6,7 +6,7 @@ location /home {
     index index.html;
 }
 
-location /p/metrics/ {
+location /p/bash-metrics/web/ {
     index index.html;
 }
 
@@ -43,5 +43,4 @@ location ~ \.php$ {
     include      fastcgi_params;
     fastcgi_param  SCRIPT_FILENAME   $document_root$fastcgi_script_name;
     fastcgi_param  SCRIPT_NAME   $fastcgi_script_name;
-
 }
