Refactor to goldeneye v2
- Dockerized web, dns, samba, games
- Prometheus (cadvisor and node-exporter) and grafana
- Web overhaul with ssl

--- a/goldeneye/config/unbound/unbound.conf
+++ b/goldeneye/config/unbound/unbound.conf
@@ -39,7 +39,7 @@ server:
   verbosity: 2
     
   # local network records
-  include: "/opt/unbound/etc/unbound/local_records.conf"
+  include: "/etc/unbound/local_records.conf"
              
 forward-zone:
   name: "."
@@ -47,3 +47,16 @@ forward-zone:
   forward-addr: 9.9.9.9@53#dns.quad9.net
   forward-addr: 149.112.112.112@53#dns.quad9.net
 
+remote-control:
+    # Enable remote control with unbound-control(8) here.
+    # set up the keys and certificates with unbound-control-setup.
+    control-enable: yes
+   
+    # what interfaces are listened to for remote control.
+    # give 0.0.0.0 and ::0 to listen to all interfaces.
+    control-interface: 127.0.0.1
+   
+    # port number for remote control operations.
+    control-port: 8953
+  
+    control-use-cert: no
