--- a/goldeneye/config/web/locations.conf
+++ b/goldeneye/config/web/locations.conf
@@ -44,3 +44,7 @@ location ~ \.php$ {
     fastcgi_param  SCRIPT_FILENAME   $document_root$fastcgi_script_name;
     fastcgi_param  SCRIPT_NAME   $fastcgi_script_name;
 }
+
+location /status {
+    stub_status on;
+}
