--- a/goldeneye/config/unbound/local_records.conf
+++ b/goldeneye/config/unbound/local_records.conf
@@ -1,17 +1,15 @@
 local-data: "duckpond. A 10.0.0.1"
-local-data: "rubberduck. A 10.0.0.2"
+local-data: "shelduck. A 10.0.0.2"
 local-data: "goldeneye. A 10.0.0.3"
 local-data: "chromeduck. A 10.0.0.4"
 local-data: "deskduck. A 10.0.0.5"
-
-local-data: "duckpond.lan. A 10.0.0.1"
-local-data: "rubberduck.lan. A 10.0.0.2"
-local-data: "goldeneye.lan. A 10.0.0.3"
-local-data: "chromeduck.lan. A 10.0.0.4"
-local-data: "deskduck.lan. A 10.0.0.5"
+local-data: "pi. A 10.0.0.6"
 
 local-data: "duckpond.rdoyle.net. A 10.0.0.1"
-local-data: "rubberduck.rdoyle.net. A 10.0.0.2"
+local-data: "shelduck.rdoyle.net. A 10.0.0.2"
 local-data: "goldeneye.rdoyle.net. A 10.0.0.3"
+local-data: "jellyfin.rdoyle.net. A 10.0.0.3"
+local-data: "prometheus.rdoyle.net. A 10.0.0.3"
 local-data: "chromeduck.rdoyle.net. A 10.0.0.4"
 local-data: "deskduck.rdoyle.net. A 10.0.0.5"
+local-data: "pi.rdoyle.net. A 10.0.0.6"
