--- a/goldeneye/config/web/nginx.conf
+++ b/goldeneye/config/web/nginx.conf
@@ -9,7 +9,6 @@ events {
 }
 
 http {
-
     ##
     # Basic Settings
     ##
@@ -31,7 +30,7 @@ http {
     # SSL Settings
     ##
 
-    ssl_protocols TLSv1 TLSv1.1 TLSv1.2; # Dropping SSLv3, ref: POODLE
+    ssl_protocols TLSv1.2; 
     ssl_prefer_server_ciphers on;
 
     ##
@@ -61,26 +60,24 @@ http {
 
     include /etc/nginx/conf.d/*.conf;
 
-    server {
-        listen    80 default_server;
-        server_name rdoyle.net;
-        return 302 https://$host$request_uri;
-    }
+    # server {
+    #     listen    80 default_server;
+    #     return 302 https://$host$request_uri;
+    # }
+
+    # server {
+    #     listen       443 ssl;
+    #     server_name  rdoyle.net;
+    #     root         /websrv/rdoyle.net;
+    #     ssl_certificate /etc/letsencrypt/live/rdoyle.net/fullchain.pem;
+    #     ssl_certificate_key /etc/letsencrypt/live/rdoyle.net/privkey.pem;
+    #     autoindex on;
+    #     index index.html;
+    #     include /etc/nginx/locations.conf;
+    # }
 
     server {
         listen       443 ssl;
-        server_name  rdoyle.net;
-        root         /websrv/rdoyle.net;
-        ssl_certificate /etc/letsencrypt/live/rdoyle.net/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/rdoyle.net/privkey.pem;
-
-        autoindex on;
-        index index.html;
-        include /etc/nginx/locations.conf;
-    }
-
-    server {
-        listen       443;
         server_name  grafana.rdoyle.net;
         ssl_certificate /etc/letsencrypt/live/grafana.rdoyle.net/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/grafana.rdoyle.net/privkey.pem;
@@ -88,17 +85,27 @@ http {
             proxy_pass http://grafana:3000/;
         }
     }
-
+    
     server {
-        listen    80;
-        server_name doyle.sh;
-        root    /websrv/doyle.sh;
-        default_type text/plain;
-        set $indexfile doyle.sh;
-        if ($http_connection) {
-            set $indexfile doyle.sh.html;
+        listen       443 ssl;
+        server_name  jellyfin.rdoyle.net;
+        ssl_certificate /etc/letsencrypt/live/jellyfin.rdoyle.net/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/jellyfin.rdoyle.net/privkey.pem;
+        location / {
+            proxy_pass http://jellyfin:8096/;
         }
-        add_header X-Doyle $http_connection;
-        index $indexfile;
     }
+
+    # server {
+    #     listen    80;
+    #     server_name doyle.sh;
+    #     root    /websrv/doyle.sh;
+    #     default_type text/plain;
+    #     set $indexfile doyle.sh;
+    #     if ($http_connection) {
+    #         set $indexfile doyle.sh.html;
+    #     }
+    #     add_header X-Doyle $http_connection;
+    #     index $indexfile;
+    # }
 }
