--- a/goldeneye/config/samba/smb.conf
+++ b/goldeneye/config/samba/smb.conf
@@ -49,7 +49,6 @@
 # new domain.
    security = user
    server role = standalone server
-	
    passdb backend = tdbsam
    obey pam restrictions = yes
 
@@ -57,10 +56,15 @@
 # to anonymous connections
    map to guest = bad user
 
+[store1]
+    vfs objects = catia fruit streams_xattr
+	fruit:resource = file
+	fruit:metadata = netatalk
+	fruit:locking = netatalk
+	fruit:encoding = native
 
-[store0]
-	path = /mnt/store0
-	comment = store0
+	path = /mnt/store1/drive
+	comment = store1
 	browsable = yes
 	read only = no
 	create mask = 0644
