--- a/goldeneye/config/prometheus/prometheus.yml
+++ b/goldeneye/config/prometheus/prometheus.yml
@@ -1,11 +1,16 @@
 scrape_configs:
 - job_name: cadvisor
-  scrape_interval: 15s
+  scrape_interval: 30s
   static_configs:
   - targets:
     - cadvisor:8080
 - job_name: node
-  scrape_interval: 15s
+  scrape_interval: 30s
   static_configs:
   - targets:
     - goldeneye:9100
+- job_name: dcgm
+  scrape_interval: 30s
+  static_configs:
+  - targets:
+    - goldeneye:9400
