--- a/goldeneye/config/klipper/printer.cfg
+++ b/goldeneye/config/klipper/printer.cfg
@@ -9,7 +9,8 @@ microsteps: 16
 rotation_distance: 40
 endstop_pin: ^!PE4
 homing_speed: 50
-position_endstop: 320
+position_endstop: 316.968436
+angle: 210.107161
 arm_length: 229.7
 
 [stepper_b]
@@ -19,6 +20,9 @@ enable_pin: !PF2
 microsteps: 16
 rotation_distance: 40
 endstop_pin: ^!PJ0
+position_endstop: 318.451132
+angle: 330.738075
+arm_length: 229.7
 
 [stepper_c]
 step_pin: PL3
@@ -27,6 +31,9 @@ enable_pin: !PK0
 microsteps: 16
 rotation_distance: 40
 endstop_pin: ^!PD2
+position_endstop: 317.207409
+angle: 90.0
+arm_length: 229.7
 
 [extruder]
 step_pin: PA4
@@ -62,7 +69,13 @@ kinematics: delta
 max_velocity: 300
 max_accel: 3000
 max_z_velocity: 150
-delta_radius: 145
+delta_radius: 145.281935
 
 [delta_calibrate]
 radius: 50
+
+# Calibration results Feb 2023
+# stepper_a: position_endstop: 316.968436 angle: 210.107161 arm_length: 229.700000
+# stepper_b: position_endstop: 318.451132 angle: 330.738075 arm_length: 229.700000
+# stepper_c: position_endstop: 317.207409 angle: 90.000000 arm_length: 229.700000
+# delta_radius: 145.281935
