--- a/goldeneye/config/klipper/printer.cfg
+++ b/goldeneye/config/klipper/printer.cfg
@@ -9,9 +9,6 @@ microsteps: 16
 rotation_distance: 40
 endstop_pin: ^!PE4
 homing_speed: 50
-position_endstop: 316.968436
-angle: 210.107161
-arm_length: 229.7
 
 [stepper_b]
 step_pin: PF6
@@ -20,9 +17,6 @@ enable_pin: !PF2
 microsteps: 16
 rotation_distance: 40
 endstop_pin: ^!PJ0
-position_endstop: 318.451132
-angle: 330.738075
-arm_length: 229.7
 
 [stepper_c]
 step_pin: PL3
@@ -31,13 +25,10 @@ enable_pin: !PK0
 microsteps: 16
 rotation_distance: 40
 endstop_pin: ^!PD2
-position_endstop: 317.207409
-angle: 90.0
-arm_length: 229.7
 
 [extruder]
 step_pin: PA4
-dir_pin: PA6
+dir_pin: !PA6
 enable_pin: !PA2
 microsteps: 16
 rotation_distance: 33.500
@@ -69,7 +60,6 @@ kinematics: delta
 max_velocity: 300
 max_accel: 3000
 max_z_velocity: 150
-delta_radius: 145.281935
 
 [delta_calibrate]
 radius: 50
@@ -79,3 +69,76 @@ radius: 50
 # stepper_b: position_endstop: 318.451132 angle: 330.738075 arm_length: 229.700000
 # stepper_c: position_endstop: 317.207409 angle: 90.000000 arm_length: 229.700000
 # delta_radius: 145.281935
+
+#*# <---------------------- SAVE_CONFIG ---------------------->
+#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
+#*#
+#*# [printer]
+#*# delta_radius = 144.699234
+#*#
+#*# [stepper_a]
+#*# angle = 212.007022
+#*# arm_length = 231.348543
+#*# position_endstop = 317.059629
+#*#
+#*# [stepper_b]
+#*# angle = 330.489317
+#*# arm_length = 227.906940
+#*# position_endstop = 320.342388
+#*#
+#*# [stepper_c]
+#*# angle = 90.000000
+#*# arm_length = 235.353724
+#*# position_endstop = 315.069977
+#*#
+#*# [delta_calibrate]
+#*# height0 = 0.0
+#*# height0_pos = 25357.000,25476.000,25377.000
+#*# height1 = 0.0
+#*# height1_pos = 27597.000,27669.000,22982.000
+#*# height2 = 0.0
+#*# height2_pos = 24381.000,29416.000,24396.000
+#*# height3 = 0.0
+#*# height3_pos = 23157.000,27436.000,27301.000
+#*# height4 = 0.0
+#*# height4_pos = 24511.000,24657.000,28223.000
+#*# height5 = 0.0
+#*# height5_pos = 26988.000,23482.000,27011.000
+#*# height6 = 0.0
+#*# height6_pos = 28729.000,24531.000,24459.000
+#*# distance0 = 53.19
+#*# distance0_pos1 = 25126.581,25600.090,25497.667
+#*# distance0_pos2 = 22672.060,28312.228,28160.745
+#*# distance1 = 53.27
+#*# distance1_pos1 = 25242.345,25364.754,25616.807
+#*# distance1_pos2 = 24269.902,24434.715,30701.177
+#*# distance2 = 53.39
+#*# distance2_pos1 = 25477.649,25245.864,25497.667
+#*# distance2_pos2 = 28132.373,22791.584,28160.745
+#*# distance3 = 53.11
+#*# distance3_pos1 = 25597.252,25359.395,25262.355
+#*# distance3_pos2 = 30681.608,24357.180,24296.041
+#*# distance4 = 52.74
+#*# distance4_pos1 = 25478.575,25594.642,25146.135
+#*# distance4_pos2 = 28150.004,28208.518,22691.607
+#*# distance5 = 52.88
+#*# distance5_pos1 = 25243.256,25716.495,25262.355
+#*# distance5_pos2 = 24283.083,30800.376,24296.041
+#*# distance6 = 53.27
+#*# distance6_pos1 = 22863.394,27725.588,28004.817
+#*# distance6_pos2 = 24450.419,24284.123,30449.530
+#*# distance7 = 53.33
+#*# distance7_pos1 = 24482.324,24312.505,29965.919
+#*# distance7_pos2 = 28227.170,22852.962,27820.984
+#*# distance8 = 52.97
+#*# distance8_pos1 = 27977.689,22980.988,27579.787
+#*# distance8_pos2 = 30430.676,24537.298,24148.304
+#*# distance9 = 53.13
+#*# distance9_pos1 = 29947.030,24571.232,24179.121
+#*# distance9_pos2 = 27809.990,28305.741,22755.273
+#*# distance10 = 52.98
+#*# distance10_pos1 = 27568.078,28059.882,22883.332
+#*# distance10_pos2 = 24134.861,30552.957,24476.637
+#*# distance11 = 52.85
+#*# distance11_pos1 = 24165.265,30069.189,24508.124
+#*# distance11_pos2 = 22735.338,27970.994,28255.040
