--- a/goldeneye/config/nginx/nginx.conf
+++ b/goldeneye/config/nginx/nginx.conf
@@ -37,8 +37,8 @@ http {
     # Logging Settings
     ##
 
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
+    # access_log /var/log/nginx/access.log;
+    # error_log /var/log/nginx/error.log;
 
     ##
     # Gzip Settings
@@ -57,24 +57,6 @@ http {
     ##
     # Virtual Host Configs
     ##
-
-    include /etc/nginx/conf.d/*.conf;
-
-    # server {
-    #     listen    80 default_server;
-    #     return 302 https://$host$request_uri;
-    # }
-
-    # server {
-    #     listen       443 ssl;
-    #     server_name  rdoyle.net;
-    #     root         /websrv/rdoyle.net;
-    #     ssl_certificate /etc/letsencrypt/live/rdoyle.net/fullchain.pem;
-    #     ssl_certificate_key /etc/letsencrypt/live/rdoyle.net/privkey.pem;
-    #     autoindex on;
-    #     index index.html;
-    #     include /etc/nginx/locations.conf;
-    # }
 
     server {
         listen       443 ssl;
@@ -95,17 +77,4 @@ http {
             proxy_pass http://jellyfin:8096/;
         }
     }
-
-    # server {
-    #     listen    80;
-    #     server_name doyle.sh;
-    #     root    /websrv/doyle.sh;
-    #     default_type text/plain;
-    #     set $indexfile doyle.sh;
-    #     if ($http_connection) {
-    #         set $indexfile doyle.sh.html;
-    #     }
-    #     add_header X-Doyle $http_connection;
-    #     index $indexfile;
-    # }
 }
