Openvpn, qbt, radarr, lounge, autoheal
- rm mc

--- a/goldeneye/config/nginx/nginx.conf
+++ b/goldeneye/config/nginx/nginx.conf
@@ -30,7 +30,7 @@ http {
     # SSL Settings
     ##
 
-    ssl_protocols TLSv1.2; 
+    ssl_protocols TLSv1.2;
     ssl_prefer_server_ciphers on;
 
     ##
@@ -58,23 +58,32 @@ http {
     # Virtual Host Configs
     ##
 
+    ssl_certificate /etc/letsencrypt/live/$server_name/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/$server_name/privkey.pem;
+
     server {
         listen       443 ssl;
         server_name  grafana.rdoyle.net;
-        ssl_certificate /etc/letsencrypt/live/grafana.rdoyle.net/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/grafana.rdoyle.net/privkey.pem;
         location / {
             proxy_pass http://grafana:3000/;
+            proxy_set_header Host $http_host;
         }
     }
-    
+
     server {
         listen       443 ssl;
         server_name  jellyfin.rdoyle.net;
-        ssl_certificate /etc/letsencrypt/live/jellyfin.rdoyle.net/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/jellyfin.rdoyle.net/privkey.pem;
         location / {
             proxy_pass http://jellyfin:8096/;
         }
     }
+
+    server {
+        listen       443 ssl;
+        server_name  thelounge.rdoyle.net;
+        location / {
+            proxy_pass http://thelounge:9000/;
+        }
+    }
+
 }
