--- a/goldeneye/config/unbound/unbound.conf
+++ b/goldeneye/config/unbound/unbound.conf
@@ -40,6 +40,9 @@ server:
     
   # local network records
   include: "/etc/unbound/local_records.conf"
+  
+  # block lists
+  include: "/etc/unbound/block.conf"
              
 forward-zone:
   name: "."
