--- a/goldeneye/config/nginx/nginx.conf
+++ b/goldeneye/config/nginx/nginx.conf
@@ -60,6 +60,15 @@ http {
 
     ssl_certificate /etc/letsencrypt/live/$server_name/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/$server_name/privkey.pem;
+    
+    server {
+        listen       443 ssl;
+        server_name  minio.rdoyle.net;
+        location / {
+            proxy_pass http://minio:9000/;
+            proxy_set_header Host $http_host;
+        }
+    }
 
     server {
         listen       443 ssl;
@@ -85,5 +94,71 @@ http {
             proxy_pass http://thelounge:9000/;
         }
     }
+
+    server {
+        listen       443 ssl;
+        server_name  radarr.rdoyle.net;
+        allow 10.0.0.0/8;
+        deny all;
+        location / {
+            proxy_pass http://radarr:7878/;
+        }
+    }
+    
+    server {
+        listen       443 ssl;
+        server_name  jackett.rdoyle.net;
+        allow 10.0.0.0/8;
+        deny all;
+        location / {
+            proxy_pass http://jackett:9117/;
+        }
+    }
+    
+    server {
+        listen       443 ssl;
+        server_name  qbittorrent.rdoyle.net;
+        allow 10.0.0.0/8;
+        deny all;
+        location / {
+            proxy_pass http://qbittorrent:5908/;
+            proxy_set_header Host $http_host;
+        }
+    }
+    
+    server {
+        listen       443 ssl;
+        server_name  rss.rdoyle.net;
+        location / {
+            proxy_pass http://freshrss/;
+            proxy_set_header Host $http_host;
+        }
+    }
+    
+    server {
+        listen       443 ssl;
+        server_name  alert.rdoyle.net;
+        location / {
+            proxy_pass http://172.17.0.1:5908/;
+            proxy_set_header Host $http_host;
+        }
+    }
+    # server {
+    #     listen       443 ssl;
+    #     server_name  octoprint.rdoyle.net;
+    #     allow 10.0.0.0/8;
+    #     deny all;
+    #     location / {
+    #         proxy_pass http://octoklip:80/;
+    #         proxy_set_header Host $http_host;
+    #         proxy_set_header Upgrade $http_upgrade;
+    #         proxy_set_header Connection "upgrade";
+    #         proxy_set_header X-Real-IP $remote_addr;
+    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #         proxy_set_header X-Scheme $scheme;
+    #         proxy_http_version 1.1;
+    #         client_max_body_size 0;
+    #     }
+    # }
 
 }
